# contract-clause-tracker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: main.py  models.py  schemas.py  services.py
backend/app/routers/: clauses.py  contracts.py  sentences.py
backend/app/tests/: test_endpoints.py
backend/models/: models.py
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/pages/contract-detail/: contract-detail.css  contract-detail.html  contract-detail.spec.ts  contract-detail.ts
frontend/src/app/pages/dashboard/: dashboard.css  dashboard.html  dashboard.ts
frontend/src/app/pages/dashboard/upload-dialog/: upload-dialog.css  upload-dialog.html  upload-dialog.ts
frontend/src/app/services/: api.ts
