[project]
name = "contract-clause-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "nltk>=3.9.4",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.43.0",
]
